--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObAh2Fn+jiTTaL+F3nt2HZ",
+      "authorship_tag": "ABX9TyOtgnEpKmZHYbIc8xURlIqb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "AduHtHXWze-2"
       },
@@ -61,7 +61,7 @@
         "id": "06Ywm_uB4ews",
         "outputId": "fb51bdd9-1f54-4b8d-c1f8-92738569ecb1"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -96,7 +96,7 @@
         "id": "TIwi9RR241xq",
         "outputId": "93892ae0-bf96-4c6c-fbac-b283a39e60df"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -123,7 +123,7 @@
         "id": "kbBdfXuM45rE",
         "outputId": "4ec0bc75-5045-45c6-baf3-0547210d3d9d"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -155,7 +155,7 @@
       "metadata": {
         "id": "38S-EdmT6VKo"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
         "id": "MOY0_S8q61mG",
         "outputId": "d7e06924-d712-4039-ab05-12049ea01d32"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -204,7 +204,7 @@
       "metadata": {
         "id": "Rg-5-PWg7QvF"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +233,7 @@
         "id": "VJnLE-st8HgT",
         "outputId": "b9c0e5e7-c28e-46e1-ce0d-9ebc4a3534c9"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +273,7 @@
         "id": "AxO7ezMj7uBD",
         "outputId": "2c2976bf-b98f-407a-dd63-e9d6763efa3a"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "cIiAEP0b-RqC"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +322,7 @@
         "id": "C62Pzkg-q3UT",
         "outputId": "61c0f717-385d-4da1-d115-0197aa93785a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -350,7 +350,7 @@
         "id": "_WwtCqUAq7vM",
         "outputId": "61dafeab-c7c6-4435-dd11-c3bdfe131d0a"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +378,7 @@
       "metadata": {
         "id": "aPqBAJF0rL48"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -391,7 +391,7 @@
       "metadata": {
         "id": "aWcuQFVDr82G"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +406,7 @@
       "metadata": {
         "id": "pB3Pzz28sIAe"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -418,7 +418,7 @@
       "metadata": {
         "id": "bqJLUFg5sbOb"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -431,7 +431,7 @@
       "metadata": {
         "id": "yiZPF1fitBy5"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -450,7 +450,7 @@
       "metadata": {
         "id": "1sl5n0vStn2o"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -466,7 +466,7 @@
         "id": "T2BshL3ytu3w",
         "outputId": "5452a860-e402-41e4-b0d9-20da043e4e22"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,12 +489,121 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Exercise\n",
+        "Predict canada's per capita income in year 2020. There is an exercise folder here on github at same level as this notebook, download that and you will find canada_per_capita_income.csv file. Using this build a regression model and predict the per capita income fo canadian citizens in year 2020\n"
+      ],
+      "metadata": {
+        "id": "4t-yOZkohFSu"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd"
+      ],
       "metadata": {
         "id": "yK7pWKQJtvzh"
       },
-      "execution_count": 45,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = pd.read_csv('https://raw.githubusercontent.com/codebasics/py/master/ML/1_linear_reg/Exercise/canada_per_capita_income.csv')\n",
+        "df.columns"
+      ],
+      "metadata": {
+        "id": "RZsJr-7wh5vF",
+        "outputId": "71fdcc66-4ef3-4fce-8555-9e5bc9c72c30",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['year', 'per capita income (US$)'], dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = df[[\"year\"]]\n",
+        "y = df['per capita income (US$)']\n"
+      ],
+      "metadata": {
+        "id": "2QNWc3tNiAQZ"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LinearRegression\n",
+        "alg = LinearRegression()\n",
+        "alg.fit(x,y)\n",
+        "alg.predict([[2020]])\n"
+      ],
+      "metadata": {
+        "id": "6OUmXCWkiDFU",
+        "outputId": "491bf23d-5dfe-4e82-b327-77d30f7f11cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/base.py:439: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([41288.69409442])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Answer is : Canada's per capita income in 2020 will be 41288.69409442"
+      ],
+      "metadata": {
+        "id": "LLWFHhHdkgE4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "41288"
+      ],
+      "metadata": {
+        "id": "4NjymTC9iuQG"
+      },
+      "execution_count": 22,
       "outputs": []
     }
   ]
